# aio4-bpr-baseline

./: .gitignore  Dockerfile  README.md  api.py  build_passage_faiss_index.py  compute_score.py  convert_passage_dataset.py  convert_retriever_dataset.py  evaluate_docker.py  evaluate_docker_api.py  evaluate_reader.py  evaluate_retriever.py  gather_json_predictions.py  gather_numpy_predictions.py  prediction_api.py  prediction_loop.py  requirements.txt  setup.cfg
aio4_bpr_baseline/: lightning_cli.py
aio4_bpr_baseline/callbacks/: prediction_writer.py
aio4_bpr_baseline/configs/pipeline_aio4/bpr/: pipeline.yaml
aio4_bpr_baseline/configs/pipeline_aio4/bpr_extractive_reader/: pipeline.yaml
aio4_bpr_baseline/configs/reader/extractive_reader/: reader.yaml  reader_predict.yaml  reader_prediction.yaml
aio4_bpr_baseline/configs/retriever/bpr/: biencoder.yaml  embedder.yaml  (+1 more)
aio4_bpr_baseline/pipeline_aio4/bpr/: onnx_modules.py
aio4_bpr_baseline/pipeline_aio4/bpr_extractive_reader/: lightning_modules.py
aio4_bpr_baseline/reader/extractive_reader/: lightning_modules.py  modeling.py  onnx_modules.py  tokenization.py
aio4_bpr_baseline/retriever/bpr/: lightning_modules.py  modeling.py  onnx_modules.py  tokenization.py
aio4_bpr_baseline/utils/: convert_dataset.py  convert_passages.py  data.py  evaluate_reader.py  evaluate_retriever.py  gather_json_predictions.py  gather_numpy_predictions.py
callbacks/: prediction_writer.py
configs/: embedder.yaml  pipeline.yaml  reader.yaml  retriever.yaml
models/: embedder.py  pipeline.py  reader.py  retriever.py
utils/: data.py
(+10 files in other folders)
