[metadata]
name = aio4_bpr_baseline
version = 1.0.0
authors = Masatoshi Suzuki

[options]
packages = aio4_bpr_baseline
install_requires =
    datasets
    faiss-cpu
    numpy
    regex
    scipy
    tqdm
    transformers[ja]

[options.extras_require]
dev =
    black
lightning =
    jsonargparse[signatures]
    lightning
    tensorboard
    torch
onnx =
    onnx
    onnxruntime
