[metadata]
name = aio4_bpr_baseline
version = 1.0.0
authors = Masatoshi Suzuki

[options]
packages = aio4_bpr_baseline
install_requires =
    datasets
    faiss-cpu
    fastapi
    jsonargparse[signatures]
    lightning
    numpy
    regex
    scipy
    tensorboard
    torch
    tqdm
    transformers[ja]
    uvicorn
